<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martindisch.weather.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvLatestTitle"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/latest" />

        <TextView
            android:id="@+id/tvLatestTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLatestTitle"
            android:text="@string/none" />

        <TextView
            android:id="@+id/tvLatestHum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLatestTemp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/none" />

        <RadioGroup
            android:id="@+id/rgTimeframe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:baselineAlignedChildIndex="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/rbWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week" />

            <RadioButton
                android:id="@+id/rbDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvHistoricTitle"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLatestHum"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/historic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bLoadGraph"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/tvHistoricTitle"
            android:text="@string/load_graph"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/tvHistoricTitle"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
